k8s-config/billing-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-service
  template:
    metadata:
      labels:
        app: billing-service
    spec:
      containers:
      - name: billing-service
        image: billing-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
spec:
  selector:
    app: billing-service
  ports:
  - port: 8085
    targetPort: 8085
  type: ClusterIP
