k8s-config/cars-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cars-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cars-service
  template:
    metadata:
      labels:
        app: cars-service
    spec:
      containers:
      - name: cars-service
        image: cars-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: cars-service
spec:
  selector:
    app: cars-service
  ports:
  - port: 8082
    targetPort: 8082
  type: ClusterIP
