k8s-config/workshop-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workshop-service
  template:
    metadata:
      labels:
        app: workshop-service
    spec:
      containers:
      - name: workshop-service
        image: workshop-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: workshop-service
spec:
  selector:
    app: workshop-service
  ports:
  - port: 8084
    targetPort: 8084
  type: ClusterIP
